--- a/LeetCodeSolutions.csproj
+++ b/LeetCodeSolutions.csproj
@@ -8,7 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Medium\" />
+      <Folder Include="Hard\" />
     </ItemGroup>
 
 </Project>
